fixtures/forge_build_error.txt
Compiling 224 files with Solc 0.8.18
Compiling 64 files with Solc 0.5.17
Compiling 55 files with Solc 0.8.26
Solc 0.5.17 finished in 303.83ms
Solc 0.8.26 finished in 1.73s
Solc 0.8.18 finished in 5.53s
Compiler run failed:
Error (7920): Identifier not found or not unique.
  --> test/integration/protocol/BrokerIntegration.t.sol:56:5:
   |
56 |     IBiPoolManager.PoolExchange memory pool = biPoolManager.getPoolExchange(pair_cUSD_bridgedUSDC_ID);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: Experimental features are turned on. Do not use experimental features on live deployments.
contracts/interfaces/IBreakerBox.sol:3:1: Warning: Experimental features are turned on. Do not use experimental features on live deployments.
pragma experimental ABIEncoderV2;
^-------------------------------^
Warning: Experimental features are turned on. Do not use experimental features on live deployments.
contracts/libraries/TradingLimits.sol:3:1: Warning: Experimental features are turned on. Do not use experimental features on live deployments.
pragma experimental ABIEncoderV2;
^-------------------------------^
